tests/syntax_error/number_underscore_suffix_oct.jou
def main() -> int:
    return 0o777_  # Error: invalid number or variable name "0o777_"
